# khivemcp

./: .gitignore  .pre-commit-config.yaml  .roomodes  Dockerfile  LICENSE  README.md  TEST_REPORT.md  debug_data_processor.py  dev_style.md  direct_mcp_client.py  direct_validator_test.py  docker-compose.yml  mcp_data_processor_wrapper.py  mcp_diagnostics.py  mcp_format_test.py  mcp_tool_debug.py  mkdocs.yml  proper_client_test.py  pyproject.toml  pytest.ini  requirements-dev.txt  simple_validator.py  test_client_connection.py  test_server_directly.py  test_simple_mcp_client.py  test_verification.py
.github/workflows/: ci.yml  codeql.yml  docs.yml  release.yml
automcp/: __init__.py  __main__.py  cli.py  client.py  config.py  decorators.py  exceptions.py  group.py  manager.py  operation.py  runner.py  server.py  testing.py  types.py  utils.py  verification.py
automcp/_cli/: server_template.py
automcp/api/: frontend.py  server.py
automcp/core/: errors.py  server.py  service.py
automcp/schemas/: __init__.py  base.py  common.py  registry.py  testing.py  validation.py
automcp/testing/: __init__.py  context.py  server.py  transforms.py
dev/: concat.ipynb  concat_files.py  impl_plan.md
dev/designs/: BrokenLinksResolution.md  DataProcessorGroup_Design.md  DocumentationDesign.md  DocumentationImprovements.md  HeadingStructureImprovements.md  LLMIntegrationDocumentation.md  assistant_tools_servicegroup.md  automcp_fastmcp_modernization.md  automcp_testing_refactoring.md  phase1_core_fastmcp_integration.md  schema-validation-fix.md  verification_integration_design.md  verification_servicegroups.md
dev/refactor/: 001_refactor_verification_core.md
dev/references/: full_mcp_20250404_source_code.txt  mcp_sdk_readme.md  mcp_usage_guide.md
docs/: AutoMCP_CLI_Architecture.md  AutoMCP_Client_Architecture.md  AutoMCP_Client_Implementation.md  AutoMCP_Configuration_Guide.md  AutoMCP_Core_Implementation.md  AutoMCP_Enhanced_Frontend.md  AutoMCP_FastAPI_Backend.md  AutoMCP_Implementation_Patterns.md  AutoMCP_MCP_Implementation.md  AutoMCP_Operation_System.md  AutoMCP_Project_Overview.md  AutoMCP_Server_Guide.md  AutoMCP_Streamlit_Frontend.md  AutoMCP_Usage_Guide.md  AutoMCP_Validation_System.md  Model_Context_Protocol.md  Project_AutoMCP.md  contributing.md  dev_style.md  index.md  specifications.md
docs/api/: index.md
docs/concepts/: configuration.md  operations.md  service_groups.md
docs/conventions/: ENV_SETUP.md  QA_PROTOCOLS.md  TESTING_STRATEGY.md
docs/examples/: simple_echo.md
docs/getting-started/: installation.md  (+1 more)
examples/: __init__.py  math-service.yaml  math_service.py  requirements.txt  stats.py  test_client.py
hivemcp/: __init__.py  cli.py  decorators.py  types.py  utils.py
khive_mcp/: __init__.py  cli.py  decorators.py  types.py  utils.py
scripts/: dev.sh  verify_client.py
tests/: __init__.py  conftest.py  dummies.py  test_cli.py  test_client.py  test_client_integration.py  test_config.py  test_context_positional_args.py  test_decorators.py  test_dependency_validation.py  test_exceptions.py  test_group.py  test_groups.py  test_init.py  test_integration_transforms.py  test_operation.py  test_operation_transformer.py  test_performance.py  test_refactoring.py  test_runner.py  test_schema_registry.py  test_schema_registry_integration.py  test_schema_validation.py  test_server.py  test_simple_integration.py  test_simple_transforms.py  test_test_server.py  test_testing.py  test_testing_context.py  test_tools.py  test_transforms.py  test_types.py  test_utils.py  test_verification.py
verification/: CLI_TEST_DOCUMENTATION.md  CLI_TEST_SUMMARY.md  FINAL_TEST_REPORT.md  TEST_REPORT.md  TEST_RESULTS.md  __init__.py  client_test_automcp.py  data_processor_mcp_server.py  example_mcp_config.json  run_cli_tests.py  run_cli_tests.sh  run_data_processor_server.py  run_group_server.py  run_server.py  run_tests.py  schemas.py  skip_failed_tests.py  test_data_processor_client.py  test_data_processor_with_client.py  test_fix.py  test_minimal_mcp.py  test_proper_mcp.py  test_simple_data_processor.py  timeout_test.py  verify_automcp.py
(+49 files in other folders)
