[project]
name = "automcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.6.0",
    "pydantic>=2.0.0",
    "typer>=0.15.1",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "ipykernel>=6.29.5",
    "isort>=5.13.2",
    "lionagi>=0.10.5",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.1.0",
]

[tool.black]
line-length = 79
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 79

[tool.flake8]
ignore = ["E203", "W503", "E501", "E402"]
max-line-length = 79
exclude = [".git", "__pycache__", "build", "dist", ".venv"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "performance: marks tests as performance",
    "slow: marks tests as slow",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["automcp"]

[tool.hatch.build]
exclude = [
    "dev/*",
    "data/*",
    "notebooks/*",
    "tests/*",
    "verification",
    "*.pyc",
    "__pycache__",
    "temp_logs/*",
    "logs/*"
]
