[project]
name = "hivemcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.6.0",
    "pydantic>=2.0.0",
    "typer>=0.15.1",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "isort>=5.13.2",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.1.0",
]

[tool.black]
line-length = 88
target-version = ["py310"]
include = '''
(
    \.pyi?$    # Python files
  | \.ipynb$   # Jupyter notebooks
)
'''
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/(dev|data|notebooks)/
'''
force-exclude = '''
# Never format these files
.*test_data\.py
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "performance: marks tests as performance",
    "slow: marks tests as slow",
]

[project.scripts]
hivemcp = "hivemcp.cli:app [cli]"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hivemcp"]

[tool.hatch.build]
exclude = [
    "dev/*",
    "data/*",
    "notebooks/*",
    "tests/*",
    "*.pyc",
    "__pycache__",
    "temp_logs/*",
    "logs/*",
    "verification",
    "scripts",
]
